Lose some semicolons

--- a/styles/screen.styl
+++ b/styles/screen.styl
@@ -40,8 +40,8 @@ section
 
 // Main header.
 body > h1
-  background-color: #222;
-  color: #fff;
+  background-color: #222
+  color: #fff
   font-size: 36px
   font-weight: normal
   line-height: baseline * 3
@@ -122,7 +122,7 @@ dl
 
 
 show-baseline-background(color=rgba(#eee, .7))
-  background-image: linear-gradient(bottom, color 5%, rgba(color, 0) 5%);
+  background-image: linear-gradient(bottom, color 5%, rgba(color, 0) 5%)
   background-position: left 1px
   background-size: 100% baseline
 
