--- a/templates/zakj.html
+++ b/templates/zakj.html
@@ -22,7 +22,7 @@
     previously for companies like <a href="http://www.etsy.com/">Etsy</a> and
     <a href="http://www.good.is">GOOD</a>. I'm passionate about Python,
     CoffeeScript, minimal design, and grammar. Lately, my time is filled
-    crafting web experiences via <a href="http://madebycabin.com/">Cabin</a>.
+    crafting web experiences at <a href="http://madebycabin.com/">Cabin</a>.
     </p>
   </section>
 
