Text changes to /zakj

--- a/templates/zakj.html
+++ b/templates/zakj.html
@@ -19,7 +19,7 @@
 
     <p>Hello! I'm a full-stack developer with a background in information
     security. I've been building things on the web since the nineties,
-    previously for companies like <a href="http://www.etsy.com/">Etsy</a> and
+    previously with companies like <a href="http://www.etsy.com/">Etsy</a> and
     <a href="http://www.good.is">GOOD</a>. I'm passionate about Python,
     CoffeeScript, minimal design, and grammar. Lately, my time is filled
     crafting web experiences at <a href="http://madebycabin.com/">Cabin</a>.
@@ -32,11 +32,8 @@
     <dl>
       <dt><a href="http://madebycabin.com/">Cabin</a></dt>
       <dd>a growing collection of personal and client work</dd>
-      <dt><a href="https://chrome.google.com/webstore/detail/ndjggnnohdkheiijjhbklkanjcpibbng">Linkhunter</a></dt>
-      <dd>
-        a Chrome extension for bookmarks with Pinboard &amp; Delicious
-        (<a href="https://github.com/cabin/linkhunter">source</a>)
-      </dd>
+      <dt><a href="https://github.com/cabin/linkhunter">Linkhunter</a></dt>
+      <dd>a browser extension for bookmarks with Pinboard &amp; Delicious (<a href="https://chrome.google.com/webstore/detail/ndjggnnohdkheiijjhbklkanjcpibbng">Chrome</a>)</dd>
       <dt><a href="https://github.com/zakj/dotfiles">dotfiles</a></dt>
       <dd>my personal configuration files&mdash;vim, zsh, git, mutt, etc.</dd>
       <dt><a href="https://github.com/zakj/redthonic">redthonic</a></dt>
